5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4160/executions/1836_2603.log
== TEST (2019-07-01 20:24:19) 
-- CODE:
from numpy import*
from numpy.linalg import*
vet = array(eval(input("Digite uma matriz: ")))

v1 = sorted(vet,reverse=True)
print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 20:24:49) 
-- CODE:
from numpy import*
from numpy.linalg import*
vet = array(eval(input("Digite uma matriz: ")))

v1 = sorted(v1,reverse=True)
print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 20:25:10) 
-- CODE:
from numpy import*
from numpy.linalg import*
vet = array(eval(input("Digite uma matriz: ")))
v1 = zeros(4,dtype=int)
v1 = sorted(v1,reverse=True)
print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 20:27:33) 
-- CODE:
from numpy import*
from numpy.linalg import*
vet = array(eval(input("Digite uma matriz: ")))
v1 = zeros(4,dtype=int)
v1 = sorted(vet,reverse=True)



print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 20:27:35) 
-- CODE:
from numpy import*
from numpy.linalg import*
vet = array(eval(input("Digite uma matriz: ")))
v1 = zeros(4,dtype=int)
v1 = sorted(vet,reverse=True)



print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 20:27:59) 
-- CODE:
from numpy import*
from numpy.linalg import*
vet = array(eval(input("Digite uma matriz: ")))
v1 = zeros((4,4),dtype=int)
v1 = sorted(vet,reverse=True)



print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 20:28:19) 
-- CODE:
from numpy import*
from numpy.linalg import*
vet = array(eval(input("Digite uma matriz: ")))
v1 = zeros((4,4),dtype=int)
v1 = sorted(vet,reverse=True)



print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 20:28:31) 
-- CODE:
from numpy import*
from numpy.linalg import*
vet = array(eval(input("Digite uma matriz: ")))
v1 = zeros((4,4),dtype=int)
v1 = sorted(vet,reverse=True)



print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 20:28:45) 
-- CODE:
from numpy import*
from numpy.linalg import*
vet = array(eval(input("Digite uma matriz: ")))
v1 = zeros((4,4),dtype=int)
v1 = sorted(vet,reverse=True)



print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 20:29:30) 
-- CODE:
from numpy import*
from numpy.linalg import*
vet = array(eval(input("Digite uma matriz: ")))
v1 = zeros((4,4),dtype=int)
v1 = sorted(vet,reverse=True)



print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 20:29:47) 
-- CODE:
from numpy import*
from numpy.linalg import*
vet = array(eval(input("Digite uma matriz: ")))
v1 = zeros((4,4),dtype=int)
v1 = sorted(v1,reverse=True)



print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 20:30:05) 
-- CODE:
from numpy import*
from numpy.linalg import*
vet = array(eval(input("Digite uma matriz: ")))
v1 = zeros((4,4),dtype=int)
v1 = sorted(vet,reverse=True)



print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 20:31:00) 
-- CODE:
from numpy import*
from numpy.linalg import*
vet = array(eval(input("Digite uma matriz: ")))
v1 = zeros(4,dtype=int)
v1 = sorted(vet,reverse=True)



print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 20:51:29) 
-- CODE:
from numpy import*
from numpy.linalg import*
vet = array(eval(input("Digite uma matriz: ")))
#vetor auxiliar pra coluna:
v1 = zeros(4,dtype=int)
v1 = sorted(v1,reverse=True)
for i in range(4):
	a[:,i] = sorted(a[:,i],reverse=True)
print(a)
	


print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 20:51:35) 
-- CODE:
from numpy import*
from numpy.linalg import*
vet = array(eval(input("Digite uma matriz: ")))
#vetor auxiliar pra coluna:

for i in range(4):
	a[:,i] = sorted(a[:,i],reverse=True)
print(a)
	


print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 20:51:53) 
-- CODE:
from numpy import*
from numpy.linalg import*
vet = array(eval(input("Digite uma matriz: ")))
#vetor auxiliar pra coluna:
vet = a
for i in range(4):
	a[:,i] = sorted(a[:,i],reverse=True)
print(a)
	


print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 20:52:07) 
-- CODE:
from numpy import*
from numpy.linalg import*
vet = array(eval(input("Digite uma matriz: ")))
#vetor auxiliar pra coluna:
vet = a
for i in range(4):
	a[:,i] = sorted(a[:,i],reverse=True)
print(a)
	


print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 20:52:16) 
-- CODE:
from numpy import*
from numpy.linalg import*
vet = array(eval(input("Digite uma matriz: ")))
#vetor auxiliar pra coluna:
a= a
for i in range(4):
	a[:,i] = sorted(a[:,i],reverse=True)
print(a)
	


print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 20:52:31) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input("Digite uma matriz: ")))
#vetor auxiliar pra coluna:
a= a
for i in range(4):
	a[:,i] = sorted(a[:,i],reverse=True)
print(a)
	


print(v1)
-- EXECUTION TIME:
1.02905
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1836/2603/main.py", line 12, in <module>
    print(v1)
NameError: name 'v1' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 20:52:42) 
-- CODE:
from numpy import*
from numpy.linalg import*
a = array(eval(input("Digite uma matriz: ")))
#vetor auxiliar pra coluna:
a= a
for i in range(4):
	a[:,i] = sorted(a[:,i],reverse=True)
print(a)
	



-- EXECUTION TIME:
1.07958
-- TEST CASE 1:
---- input:
[[1,1,1,1],[2,2,2,2],[3,3,3,3],[4,4,4,4]]
---- correct output:
[[4 4 4 4]
[3 3 3 3]
[2 2 2 2]
[1 1 1 1]]
---- user output:
[[4 4 4 4]
 [3 3 3 3]
 [2 2 2 2]
 [1 1 1 1]]
-- TEST CASE 2:
---- input:
[[4,1,1,3],[3,2,2,3],[2,3,3,3],[1,4,4,3]]
---- correct output:
[[4 4 4 3]
[3 3 3 3]
[2 2 2 3]
[1 1 1 3]]
---- user output:
[[4 4 4 3]
 [3 3 3 3]
 [2 2 2 3]
 [1 1 1 3]]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
